...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Dashboard View Contrller-->
        <scene sceneID="qbb-H2-jyf">
            <objects>
                <viewController storyboardIdentifier="Dashboard" id="5kz-cn-E39" customClass="DashboardViewContrller" customModule="showtime" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="s6j-eF-wgu"/>
                        <viewControllerLayoutGuide type="bottom" id="Im0-lu-kbB"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="5Gx-CT-LpV">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Ors-tn-mpI" id="4aD-XI-lkJ">
                                            <rect key="frame" x="0.0" y="0.0" width="342" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Artist" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CVG-ad-MJ7">
                                                    <rect key="frame" x="8" y="11" width="80" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="80" id="xOT-JN-9e1"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CVe-QP-gEn" id="5nM-Au-LjS">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zqt-PL-Z9l">
                                                    <rect key="frame" x="8" y="11" width="80" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="80" id="rOH-av-PYR"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                        <rect key="frame" x="0.0" y="304" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eIX-72-7kO" id="vFB-QU-wtK">
                                            <rect key="frame" x="0.0" y="0.0" width="342" height="44"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Venue" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BjY-3I-qgH">
                                                    <rect key="frame" x="8" y="11" width="80" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="80" id="DOi-oi-fMF"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DCZ-Vl-7pw">
                                                    <rect key="frame" x="8" y="28" width="359" height="50"/>
                                                    <color key="backgroundColor" red="0.78431372549019607" green="0.78431372549019607" blue="0.78431372549019607" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="50" id="lbP-Dv-iUn"/>
                                                    </constraints>
                                                    <state key="normal" title="Add Concert"/>
                                                    <connections>
                                                        <action selector="addConcert:" destination="hZx-Eq-RcQ" eventType="touchUpInside" id="lfX-gF-Rqh"/>
                                                    </connections>
                                                </button>
                                            </subviews>
                                            <constraints>
...
