...
        dashboardNC = UINavigationController(rootViewController: dashboardVC)
        concertsNC = UINavigationController(rootViewController: listConcertsVC)
        artistsNC = UINavigationController(rootViewController: listArtistsVC)
        venuesNC = UINavigationController(rootViewController: listVenuesVC)
        addNC = UINavigationController(rootViewController: addConcertVC)

        dashboardNC.tabBarItem = UITabBarItem(title: "Dashboard", image: #imageLiteral(resourceName: "dashboard"), tag: 1)
        concertsNC.tabBarItem = UITabBarItem(title: "Concerts", image: #imageLiteral(resourceName: "concert"), tag: 2)
        artistsNC.tabBarItem = UITabBarItem(title: "Artists", image: #imageLiteral(resourceName: "artist"), tag: 3)
        venuesNC.tabBarItem = UITabBarItem(title: "Venues", image: #imageLiteral(resourceName: "venue"), tag: 4)
        addNC.tabBarItem = UITabBarItem(title: "Add Concert", image: #imageLiteral(resourceName: "addConcert"), tag: 5)

        rootVC.setViewControllers([dashboardNC, concertsNC, artistsNC, venuesNC, addNC], animated: true)
...
